fixed image widths on small resolutions

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -45,3 +45,8 @@ body {
     line-height      : 75px;
     font-size        : 1.5em;
 }
+
+.auto-width {
+    max-width : 100%;
+    height    : auto;
+}
